src/oid4vci/snapshots/credibil_vc__oid4vci__issuer__tests__authorization_configuration_id.snap
---
source: src/oid4vci/issuer.rs
assertion_line: 2315
expression: request
---
credential_issuer: "https://example.com"
response_type: code
client_id: "1234"
redirect_uri: "http://localhost:3000/callback"
state: "1234"
code_challenge: "1234"
code_challenge_method: S256
authorization_details: "[authorization_details]"
subject_id: "1234"
wallet_issuer: "1234"
