src/oid4vci/snapshots/credibil_vc__oid4vci__issuer__tests__authorization_details.snap
---
source: src/oid4vci/issuer.rs
assertion_line: 2322
expression: object.authorization_details
---
- type: openid_credential
  credential_configuration_id: EmployeeID_JWT
  credential_definition:
    credentialSubject:
      email: {}
      family_name: {}
      given_name: {}
