src/oid4vci/snapshots/credibil_vc__oid4vci__issuer__tests__authorization_format.snap
---
source: src/oid4vci/issuer.rs
assertion_line: 2362
expression: "&serialized"
---
credential_issuer=https%3A%2F%2Fexample.com&response_type=code&client_id=1234&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fcallback&state=1234&code_challenge=1234&code_challenge_method=S256&authorization_details=%5B%7B%22type%22%3A%22openid_credential%22%2C%22format%22%3A%22jwt_vc_json%22%2C%22credential_definition%22%3A%7B%22type%22%3A%5B%22VerifiableCredential%22%2C%22EmployeeIDCredential%22%5D%7D%7D%5D&subject_id=1234&wallet_issuer=1234
