src/oid4vci/snapshots/credibil_vc__oid4vci__issuer__tests__claim_label_display_default.snap
---
source: src/oid4vci/issuer.rs
assertion_line: 2606
expression: "&default"
---
- Address.Country
- Address.Locality
- Address.Region
- Address.Street Address
- Email
- Family name
- Given name
