src/oid4vci/snapshots/credibil_vc__oid4vci__issuer__tests__claim_label_display_en-NZ.snap
---
source: src/oid4vci/issuer.rs
assertion_line: 2602
expression: "&claims"
---
- Address.Country
- Address.Locality
- Address.Region
- Address.Street Address
- Email
- Family name
- Given name
