src/oid4vci/snapshots/credibil_vc__oid4vci__issuer__tests__credential_format.snap
---
source: src/oid4vci/issuer.rs
assertion_line: 2425
expression: "&deserialized"
---
credential_issuer: "https://example.com"
access_token: "1234"
format: jwt_vc_json
credential_definition:
  type:
    - VerifiableCredential
    - EmployeeIDCredential
proof:
  proof_type: jwt
  jwt: SomeJWT
