src/oid4vci/snapshots/credibil_vc__oid4vci__issuer__tests__credential_identifier.snap
---
source: src/oid4vci/issuer.rs
assertion_line: 2385
expression: "&deserialized"
---
credential_issuer: "https://example.com"
access_token: "1234"
credential_identifier: EngineeringDegree2023
proof:
  proof_type: jwt
  jwt: SomeJWT
