src/oid4vci/snapshots/credibil_vc__oid4vci__issuer__tests__multiple_proofs.snap
---
source: src/oid4vci/issuer.rs
assertion_line: 2464
expression: "&deserialized"
---
credential_issuer: "https://example.com"
access_token: "1234"
credential_identifier: EngineeringDegree2023
proofs:
  jwt:
    - SomeJWT1
    - SomeJWT2
